add county for fips, add county to drop from X and y, explore charts per county, and test in modeling

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -32,6 +32,7 @@
        "      <th>home_tax_value</th>\n",
        "      <th>year_built</th>\n",
        "      <th>fips</th>\n",
+       "      <th>county</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -43,6 +44,7 @@
        "      <td>315000.0</td>\n",
        "      <td>1971.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9432</th>\n",
@@ -52,6 +54,7 @@
        "      <td>51513.0</td>\n",
        "      <td>1947.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50142</th>\n",
@@ -61,6 +64,7 @@
        "      <td>64709.0</td>\n",
        "      <td>1949.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38310</th>\n",
@@ -70,6 +74,7 @@
        "      <td>218663.0</td>\n",
        "      <td>1952.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7652</th>\n",
@@ -79,18 +84,26 @@
        "      <td>1700000.0</td>\n",
        "      <td>1987.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       bedrooms  bathrooms  square_feet  home_tax_value  year_built    fips\n",
-       "24082       3.0        2.0       1040.0        315000.0      1971.0  6037.0\n",
-       "9432        4.0        1.0       1354.0         51513.0      1947.0  6037.0\n",
-       "50142       3.0        1.0       1180.0         64709.0      1949.0  6037.0\n",
-       "38310       3.0        2.0       1922.0        218663.0      1952.0  6037.0\n",
-       "7652        4.0        4.0       3710.0       1700000.0      1987.0  6037.0"
+       "       bedrooms  bathrooms  square_feet  home_tax_value  year_built    fips  \\\n",
+       "24082       3.0        2.0       1040.0        315000.0      1971.0  6037.0   \n",
+       "9432        4.0        1.0       1354.0         51513.0      1947.0  6037.0   \n",
+       "50142       3.0        1.0       1180.0         64709.0      1949.0  6037.0   \n",
+       "38310       3.0        2.0       1922.0        218663.0      1952.0  6037.0   \n",
+       "7652        4.0        4.0       3710.0       1700000.0      1987.0  6037.0   \n",
+       "\n",
+       "            county  \n",
+       "24082  Los Angeles  \n",
+       "9432   Los Angeles  \n",
+       "50142  Los Angeles  \n",
+       "38310  Los Angeles  \n",
+       "7652   Los Angeles  "
       ]
      },
      "execution_count": 1,
@@ -139,6 +152,7 @@
        "      <th>bedrooms</th>\n",
        "      <th>bathrooms</th>\n",
        "      <th>square_feet</th>\n",
+       "      <th>county</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -147,42 +161,47 @@
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1040.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9432</th>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1354.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50142</th>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1180.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38310</th>\n",
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1922.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7652</th>\n",
        "      <td>4.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3710.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       bedrooms  bathrooms  square_feet\n",
-       "24082       3.0        2.0       1040.0\n",
-       "9432        4.0        1.0       1354.0\n",
-       "50142       3.0        1.0       1180.0\n",
-       "38310       3.0        2.0       1922.0\n",
-       "7652        4.0        4.0       3710.0"
+       "       bedrooms  bathrooms  square_feet       county\n",
+       "24082       3.0        2.0       1040.0  Los Angeles\n",
+       "9432        4.0        1.0       1354.0  Los Angeles\n",
+       "50142       3.0        1.0       1180.0  Los Angeles\n",
+       "38310       3.0        2.0       1922.0  Los Angeles\n",
+       "7652        4.0        4.0       3710.0  Los Angeles"
       ]
      },
      "execution_count": 2,
@@ -352,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,14 +390,13 @@
     "tweedie_grid = {\"power\": [0, 1, 2, 3], \"alpha\": [0.01, 0.1, 0.5, 1.0]}\n",
     "models = [LassoLars(random_state=123, normalize=False), TweedieRegressor()]\n",
     "\n",
-    "lasso_fit_model = grid_search(X_train_scaled, y_train, models[0], lasso_grid)\n",
-    "tweddie = grid_search(X_train_scaled, y_train, models[1], tweedie_grid)\n",
-    "lr = LinearRegression().fit(X_train_scaled, y_train)"
+    "lasso = grid_search(X_train_scaled, y_train, models[0], lasso_grid)\n",
+    "tweddie = grid_search(X_train_scaled, y_train, models[1], tweedie_grid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -387,103 +405,13 @@
        "LassoLars(normalize=False, random_state=123)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lasso_fit_model.best_estimator_\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'alpha': 1.0}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lasso_fit_model.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TweedieRegressor(power=1)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tweddie.best_estimator_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'alpha': 1.0, 'power': 1}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tweddie.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lasso = LassoLars(alpha=0.5, normalize=False).fit(X_train_scaled, y_train)\n",
-    "tweedie = TweedieRegressor(power=1, alpha=0.5).fit(X_train_scaled, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3177081322343941"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lr.score(X_train_scaled, y_train)"
+    "lasso.best_estimator_\n"
    ]
   },
   {
@@ -494,7 +422,7 @@
     {
      "data": {
       "text/plain": [
-       "0.31770813222420446"
+       "{'alpha': 1.0}"
       ]
      },
      "execution_count": 14,
@@ -503,7 +431,7 @@
     }
    ],
    "source": [
-    "lasso.score(X_train_scaled, y_train)"
+    "lasso.best_params_"
    ]
   },
   {
@@ -514,7 +442,7 @@
     {
      "data": {
       "text/plain": [
-       "0.3240118509982971"
+       "TweedieRegressor(power=1)"
       ]
      },
      "execution_count": 15,
@@ -523,7 +451,109 @@
     }
    ],
    "source": [
-    "tweedie.score(X_train_scaled, y_train)"
+    "tweddie.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alpha': 1.0, 'power': 1}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweddie.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso = LassoLars(alpha=0.5, normalize=False).fit(X_train_scaled, y_train)\n",
+    "tweedie = TweedieRegressor(power=1, alpha=0.5).fit(X_train_scaled, y_train)\n",
+    "lr = LinearRegression().fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lass_pred_train = lasso.predict(X_val_scaled)\n",
+    "tweed_pred_train = tweedie.predict(X_val_scaled)\n",
+    "lr_pred_train = lr.predict(X_val_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "318701.72311575094"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_val, tweed_pred_train, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "318602.78575775656"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_val, lass_pred_train, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "318602.77199369104"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_val, lr_pred_train, squared=False)"
    ]
   },
   {
