working on report

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "7652   Los Angeles  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,13 +119,15 @@
     "from wrangle import Wrangle\n",
     "from prepare import Prepare\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
     "train, val, test = Wrangle().wrangle_zillow()\n",
     "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +154,6 @@
        "      <th>bedrooms</th>\n",
        "      <th>bathrooms</th>\n",
        "      <th>square_feet</th>\n",
-       "      <th>county</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -161,50 +162,45 @@
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1040.0</td>\n",
-       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9432</th>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1354.0</td>\n",
-       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50142</th>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1180.0</td>\n",
-       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38310</th>\n",
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1922.0</td>\n",
-       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7652</th>\n",
        "      <td>4.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3710.0</td>\n",
-       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       bedrooms  bathrooms  square_feet       county\n",
-       "24082       3.0        2.0       1040.0  Los Angeles\n",
-       "9432        4.0        1.0       1354.0  Los Angeles\n",
-       "50142       3.0        1.0       1180.0  Los Angeles\n",
-       "38310       3.0        2.0       1922.0  Los Angeles\n",
-       "7652        4.0        4.0       3710.0  Los Angeles"
+       "       bedrooms  bathrooms  square_feet\n",
+       "24082       3.0        2.0       1040.0\n",
+       "9432        4.0        1.0       1354.0\n",
+       "50142       3.0        1.0       1180.0\n",
+       "38310       3.0        2.0       1922.0\n",
+       "7652        4.0        4.0       3710.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,16 +213,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>square_feet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.304758</td>\n",
+       "      <td>-0.258425</td>\n",
+       "      <td>-1.018840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.830145</td>\n",
+       "      <td>-1.417729</td>\n",
+       "      <td>-0.614800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.304758</td>\n",
+       "      <td>-1.417729</td>\n",
+       "      <td>-0.838695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.304758</td>\n",
+       "      <td>-0.258425</td>\n",
+       "      <td>0.116074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.830145</td>\n",
+       "      <td>2.060183</td>\n",
+       "      <td>2.416785</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bedrooms  bathrooms  square_feet\n",
+       "0 -0.304758  -0.258425    -1.018840\n",
+       "1  0.830145  -1.417729    -0.614800\n",
+       "2 -0.304758  -1.417729    -0.838695\n",
+       "3 -0.304758  -0.258425     0.116074\n",
+       "4  0.830145   2.060183     2.416785"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_train_scaled, X_val_scaled, X_test_scaled, _ = p.scaling(X_train, X_val, X_test)"
+    "X_train_scaled, X_val_scaled, X_test_scaled, _ = p.scaling(X_train, X_val, X_test)\n",
+    "X_train_scaled.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -256,6 +328,7 @@
        "      <th>home_tax_value</th>\n",
        "      <th>year_built</th>\n",
        "      <th>fips</th>\n",
+       "      <th>county</th>\n",
        "      <th>baseline_prediction</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -268,6 +341,7 @@
        "      <td>315000.0</td>\n",
        "      <td>1971.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -278,6 +352,7 @@
        "      <td>51513.0</td>\n",
        "      <td>1947.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -288,6 +363,7 @@
        "      <td>64709.0</td>\n",
        "      <td>1949.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -298,6 +374,7 @@
        "      <td>218663.0</td>\n",
        "      <td>1952.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -308,6 +385,7 @@
        "      <td>1700000.0</td>\n",
        "      <td>1987.0</td>\n",
        "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -322,15 +400,15 @@
        "38310       3.0        2.0       1922.0        218663.0      1952.0  6037.0   \n",
        "7652        4.0        4.0       3710.0       1700000.0      1987.0  6037.0   \n",
        "\n",
-       "       baseline_prediction  \n",
-       "24082        455123.241223  \n",
-       "9432         455123.241223  \n",
-       "50142        455123.241223  \n",
-       "38310        455123.241223  \n",
-       "7652         455123.241223  "
+       "            county  baseline_prediction  \n",
+       "24082  Los Angeles        455123.241223  \n",
+       "9432   Los Angeles        455123.241223  \n",
+       "50142  Los Angeles        455123.241223  \n",
+       "38310  Los Angeles        455123.241223  \n",
+       "7652   Los Angeles        455123.241223  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +430,7 @@
        "386069.73075485"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,12 +460,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lasso_grid = {\"alpha\": [0.01, 0.1, 0.5, 1.0]}\n",
-    "tweedie_grid = {\"power\": [0, 1, 2, 3], \"alpha\": [0.01, 0.1, 0.5, 1.0]}\n",
+    "lasso_grid = {\"alpha\": [0.01, 0.1, 0.25, 0.5, 0.75, 1.0]}\n",
+    "tweedie_grid = {\"power\": [0, 1, 2, 3], \"alpha\": [0.01, 0.1, 0.25, 0.5, 0.75, 1.0]}\n",
     "models = [LassoLars(random_state=123, normalize=False), TweedieRegressor()]\n",
     "\n",
     "lasso = grid_search(X_train_scaled, y_train, models[0], lasso_grid)\n",
@@ -396,7 +474,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf = PolynomialFeatures(degree=4)\n",
+    "X_train_degree2 = pf.fit_transform(X_train)\n",
+    "X_validate_degree2 = pf.transform(X_val)\n",
+    "X_test_degree2 = pf.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "316001.37456703477"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lm2 = LinearRegression()\n",
+    "lm2.fit(X_train_degree2, y_train)\n",
+    "lm2_predic_train = lm2.predict(X_train_degree2)\n",
+    "mean_squared_error(y_train, lm2_predic_train, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +518,7 @@
        "LassoLars(normalize=False, random_state=123)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +538,7 @@
        "{'alpha': 1.0}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +558,7 @@
        "TweedieRegressor(power=1)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +578,7 @@
        "{'alpha': 1.0, 'power': 1}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,69 +589,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lasso = LassoLars(alpha=0.5, normalize=False).fit(X_train_scaled, y_train)\n",
-    "tweedie = TweedieRegressor(power=1, alpha=0.5).fit(X_train_scaled, y_train)\n",
+    "lasso = LassoLars(alpha=0.75, normalize=False).fit(X_train_scaled, y_train)\n",
+    "tweedie = TweedieRegressor(power=1, alpha=0.75).fit(X_train_scaled, y_train)\n",
     "lr = LinearRegression().fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lass_pred_train = lasso.predict(X_val_scaled)\n",
-    "tweed_pred_train = tweedie.predict(X_val_scaled)\n",
-    "lr_pred_train = lr.predict(X_val_scaled)"
+    "lass_pred_train = lasso.predict(X_train_scaled)\n",
+    "tweed_pred_train = tweedie.predict(X_train_scaled)\n",
+    "lr_pred_train = lr.predict(X_train_scaled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "318701.72311575094"
+       "319198.0150116717"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_squared_error(y_val, tweed_pred_train, squared=False)"
+    "mean_squared_error(y_train, tweed_pred_train, squared=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "318602.78575775656"
+       "318602.79264156776"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_squared_error(y_val, lass_pred_train, squared=False)"
+    "mean_squared_error(X_train_scaled, lass_pred_train, squared=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -547,13 +660,13 @@
        "318602.77199369104"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_squared_error(y_val, lr_pred_train, squared=False)"
+    "mean_squared_error(X_train_scaled, lr_pred_train, squared=False)"
    ]
   },
   {
