working through report

--- a/report.ipynb
+++ b/report.ipynb
@@ -71,7 +71,14 @@
     "\n",
     "### Wrangling Zillow\n",
     "- To wrangle the Zillow data, I used the Zillow database in our MySQL server, and selected `bedroomcnt`, `bathroomcnt`, `calculatedfinishedsquarefeet`, `taxvaluedollarcnt`, `yearbuilt`, `taxamount`, `fips` for single famiy residences\n",
-    "- Please see wrangle.py for full query details"
+    "- Please see wrangle.py for full query details\n",
+    "- Columns were renamed for readability\n",
+    "- The percentage of rows that had na's was small enough that I felt comfortable dropping the rows\n",
+    "- Houses that had zero bathrooms were dropped\n",
+    "- Houses with a size under 200 square feet were dropped\n",
+    "- I handled outliers by removeing a property outside of three standard deviations\n",
+    "- The `taxamount` column was dropped due to it being a potential for data leakage\n",
+    "- A `county` column was created from the `fips` codes"
    ]
   },
   {
