finished vizzes and stats testing

--- a/stat_test.ipynb
+++ b/stat_test.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import stats\n",
+    "from scipy.stats import pearsonr\n",
     "from wrangle import Wrangle\n",
     "from prepare import Prepare\n",
     "import pandas as pd"
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,72 +38,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bedroom_count</th>\n",
-       "      <th>bathroom_count</th>\n",
-       "      <th>calculated_finished_sq_ft</th>\n",
-       "      <th>tax_value_dollar_count</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>square_feet</th>\n",
+       "      <th>home_tax_value</th>\n",
        "      <th>year_built</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>county</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1305095</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2516.0</td>\n",
-       "      <td>152307.0</td>\n",
-       "      <td>1964.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1004171</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1847.0</td>\n",
-       "      <td>717561.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230522</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1348.0</td>\n",
-       "      <td>475000.0</td>\n",
-       "      <td>1953.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027031</th>\n",
+       "      <th>24082</th>\n",
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2200.0</td>\n",
-       "      <td>288611.0</td>\n",
-       "      <td>1972.0</td>\n",
+       "      <td>1040.0</td>\n",
+       "      <td>315000.0</td>\n",
+       "      <td>1971.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>921772</th>\n",
+       "      <th>9432</th>\n",
        "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>51513.0</td>\n",
+       "      <td>1947.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50142</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1180.0</td>\n",
+       "      <td>64709.0</td>\n",
+       "      <td>1949.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38310</th>\n",
+       "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1886.0</td>\n",
-       "      <td>599167.0</td>\n",
-       "      <td>1961.0</td>\n",
+       "      <td>1922.0</td>\n",
+       "      <td>218663.0</td>\n",
+       "      <td>1952.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7652</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3710.0</td>\n",
+       "      <td>1700000.0</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>Los Angeles</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         bedroom_count  bathroom_count  calculated_finished_sq_ft  \\\n",
-       "1305095            4.0             2.0                     2516.0   \n",
-       "1004171            3.0             2.5                     1847.0   \n",
-       "230522             4.0             2.0                     1348.0   \n",
-       "1027031            3.0             2.0                     2200.0   \n",
-       "921772             4.0             2.0                     1886.0   \n",
+       "       bedrooms  bathrooms  square_feet  home_tax_value  year_built    fips  \\\n",
+       "24082       3.0        2.0       1040.0        315000.0      1971.0  6037.0   \n",
+       "9432        4.0        1.0       1354.0         51513.0      1947.0  6037.0   \n",
+       "50142       3.0        1.0       1180.0         64709.0      1949.0  6037.0   \n",
+       "38310       3.0        2.0       1922.0        218663.0      1952.0  6037.0   \n",
+       "7652        4.0        4.0       3710.0       1700000.0      1987.0  6037.0   \n",
        "\n",
-       "         tax_value_dollar_count  year_built  \n",
-       "1305095                152307.0      1964.0  \n",
-       "1004171                717561.0      2011.0  \n",
-       "230522                 475000.0      1953.0  \n",
-       "1027031                288611.0      1972.0  \n",
-       "921772                 599167.0      1961.0  "
+       "            county  \n",
+       "24082  Los Angeles  \n",
+       "9432   Los Angeles  \n",
+       "50142  Los Angeles  \n",
+       "38310  Los Angeles  \n",
+       "7652   Los Angeles  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train, val, test = Wrangle().wrangle_zillow()\n",
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5437256269260173, 0.0)"
       ]
      },
      "execution_count": 3,
@@ -112,8 +145,50 @@
     }
    ],
    "source": [
-    "train, val, test = Wrangle().wrangle_zillow()\n",
-    "train.head()"
+    "r, pvalue = pearsonr(train[\"square_feet\"], train[\"home_tax_value\"])\n",
+    "r, pvalue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.47255605065606937, 0.0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r, pvalue = pearsonr(train[\"bathrooms\"], train[\"home_tax_value\"])\n",
+    "r, pvalue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2439189643252154, 0.0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r, pvalue = pearsonr(train[\"bedrooms\"], train[\"home_tax_value\"])\n",
+    "r, pvalue"
    ]
   },
   {
