--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "7652   Los Angeles  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "7652        4.0        4.0       3710.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "4  0.830145   2.060183     2.416785"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -322,101 +322,84 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bedrooms</th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>square_feet</th>\n",
-       "      <th>home_tax_value</th>\n",
-       "      <th>year_built</th>\n",
-       "      <th>fips</th>\n",
-       "      <th>county</th>\n",
-       "      <th>baseline_prediction</th>\n",
+       "      <th>actual</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>24082</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1040.0</td>\n",
        "      <td>315000.0</td>\n",
-       "      <td>1971.0</td>\n",
-       "      <td>6037.0</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9432</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1354.0</td>\n",
        "      <td>51513.0</td>\n",
-       "      <td>1947.0</td>\n",
-       "      <td>6037.0</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50142</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1180.0</td>\n",
        "      <td>64709.0</td>\n",
-       "      <td>1949.0</td>\n",
-       "      <td>6037.0</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38310</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1922.0</td>\n",
        "      <td>218663.0</td>\n",
-       "      <td>1952.0</td>\n",
-       "      <td>6037.0</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>455123.241223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7652</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3710.0</td>\n",
        "      <td>1700000.0</td>\n",
-       "      <td>1987.0</td>\n",
-       "      <td>6037.0</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8132</th>\n",
+       "      <td>512700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40424</th>\n",
+       "      <td>252760.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10848</th>\n",
+       "      <td>530114.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21149</th>\n",
+       "      <td>199838.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28075</th>\n",
+       "      <td>468872.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>32443 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       bedrooms  bathrooms  square_feet  home_tax_value  year_built    fips  \\\n",
-       "24082       3.0        2.0       1040.0        315000.0      1971.0  6037.0   \n",
-       "9432        4.0        1.0       1354.0         51513.0      1947.0  6037.0   \n",
-       "50142       3.0        1.0       1180.0         64709.0      1949.0  6037.0   \n",
-       "38310       3.0        2.0       1922.0        218663.0      1952.0  6037.0   \n",
-       "7652        4.0        4.0       3710.0       1700000.0      1987.0  6037.0   \n",
+       "          actual\n",
+       "24082   315000.0\n",
+       "9432     51513.0\n",
+       "50142    64709.0\n",
+       "38310   218663.0\n",
+       "7652   1700000.0\n",
+       "...          ...\n",
+       "8132    512700.0\n",
+       "40424   252760.0\n",
+       "10848   530114.0\n",
+       "21149   199838.0\n",
+       "28075   468872.0\n",
        "\n",
-       "            county  baseline_prediction  \n",
-       "24082  Los Angeles        455123.241223  \n",
-       "9432   Los Angeles        455123.241223  \n",
-       "50142  Los Angeles        455123.241223  \n",
-       "38310  Los Angeles        455123.241223  \n",
-       "7652   Los Angeles        455123.241223  "
+       "[32443 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "baseline_pred = train[\"home_tax_value\"].mean()\n",
-    "train['baseline_prediction'] = baseline_pred\n",
-    "train.head()"
+    "act_pred_res = pd.DataFrame({\"actual\": y_train})\n",
+    "act_pred_res"
    ]
   },
   {
@@ -427,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "386069.73075485"
+       "455123.24122306815"
       ]
      },
      "execution_count": 9,
@@ -436,7 +419,146 @@
     }
    ],
    "source": [
-    "baseline_rmse = mean_squared_error(train[\"home_tax_value\"], train[\"baseline_prediction\"], squared=False)\n",
+    "baseline_pred = train[\"home_tax_value\"].mean()\n",
+    "baseline_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>baseline_prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24082</th>\n",
+       "      <td>315000.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9432</th>\n",
+       "      <td>51513.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50142</th>\n",
+       "      <td>64709.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38310</th>\n",
+       "      <td>218663.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7652</th>\n",
+       "      <td>1700000.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8132</th>\n",
+       "      <td>512700.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40424</th>\n",
+       "      <td>252760.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10848</th>\n",
+       "      <td>530114.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21149</th>\n",
+       "      <td>199838.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28075</th>\n",
+       "      <td>468872.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32443 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          actual  baseline_prediction\n",
+       "24082   315000.0        455123.241223\n",
+       "9432     51513.0        455123.241223\n",
+       "50142    64709.0        455123.241223\n",
+       "38310   218663.0        455123.241223\n",
+       "7652   1700000.0        455123.241223\n",
+       "...          ...                  ...\n",
+       "8132    512700.0        455123.241223\n",
+       "40424   252760.0        455123.241223\n",
+       "10848   530114.0        455123.241223\n",
+       "21149   199838.0        455123.241223\n",
+       "28075   468872.0        455123.241223\n",
+       "\n",
+       "[32443 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "act_pred_res[\"baseline_prediction\"] = baseline_pred\n",
+    "act_pred_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "386069.73075485"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline_rmse = mean_squared_error(train[\"home_tax_value\"], act_pred_res[\"baseline_prediction\"] , squared=False)\n",
     "baseline_rmse"
    ]
   },
@@ -464,47 +586,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lasso_grid = {\"alpha\": [0.01, 0.1, 0.25, 0.5, 0.75, 1.0]}\n",
-    "tweedie_grid = {\"power\": [0, 1, 2, 3], \"alpha\": [0.01, 0.1, 0.25, 0.5, 0.75, 1.0]}\n",
-    "models = [LassoLars(random_state=123, normalize=False), TweedieRegressor()]\n",
+    "# lasso_grid = {\"alpha\": [0.01, 0.1, 0.25, 0.5, 0.75, 1.0]}\n",
+    "# tweedie_grid = {\"power\": [0, 1, 2, 3], \"alpha\": [0.01, 0.1, 0.25, 0.5, 0.75, 1.0]}\n",
+    "# models = [LassoLars(random_state=123, normalize=False), TweedieRegressor()]\n",
     "\n",
-    "lasso = grid_search(X_train_scaled, y_train, models[0], lasso_grid)\n",
-    "tweddie = grid_search(X_train_scaled, y_train, models[1], tweedie_grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pf = PolynomialFeatures(degree=4)\n",
-    "X_train_degree2 = pf.fit_transform(X_train)\n",
-    "X_validate_degree2 = pf.transform(X_val)\n",
-    "X_test_degree2 = pf.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "316001.37456703477"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lm2 = LinearRegression()\n",
-    "lm2.fit(X_train_degree2, y_train)\n",
-    "lm2_predic_train = lm2.predict(X_train_degree2)\n",
-    "mean_squared_error(y_train, lm2_predic_train, squared=False)"
+    "# lasso = grid_search(X_train_scaled, y_train, models[0], lasso_grid)\n",
+    "# tweddie = grid_search(X_train_scaled, y_train, models[1], tweedie_grid)"
    ]
   },
   {
@@ -589,84 +676,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lasso = LassoLars(alpha=0.75, normalize=False).fit(X_train_scaled, y_train)\n",
-    "tweedie = TweedieRegressor(power=1, alpha=0.75).fit(X_train_scaled, y_train)\n",
+    "lasso = LassoLars(alpha=1.0, normalize=False).fit(X_train_scaled, y_train)\n",
+    "tweedie = TweedieRegressor(power=1, alpha=1.0).fit(X_train_scaled, y_train)\n",
     "lr = LinearRegression().fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "lass_pred_train = lasso.predict(X_train_scaled)\n",
     "tweed_pred_train = tweedie.predict(X_train_scaled)\n",
-    "lr_pred_train = lr.predict(X_train_scaled)"
+    "lr_pred_train = lr.predict(X_train_scaled)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "319198.0150116717"
+       "(319198.00647314545, 318897.305862654, 318897.30585312896)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_squared_error(y_train, tweed_pred_train, squared=False)"
+    "mean_squared_error(y_train, tweed_pred_train, squared=False), mean_squared_error(y_train, lass_pred_train, squared=False), mean_squared_error(y_train, lr_pred_train, squared=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lass_pred_val = lasso.predict(X_val_scaled)\n",
+    "tweed_pred_val = tweedie.predict(X_val_scaled)\n",
+    "lr_pred_val = lr.predict(X_val_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "318602.79264156776"
+       "(318701.7141916137, 318602.79952656466, 318602.77199369104)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_squared_error(X_train_scaled, lass_pred_train, squared=False)"
+    "mean_squared_error(y_val, tweed_pred_val, squared=False), mean_squared_error(y_val, lass_pred_val, squared=False), mean_squared_error(y_val, lr_pred_val, squared=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "318602.77199369104"
+       "(496.2922815317288, 294.50633608934004, 294.53385943791363)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_squared_error(X_train_scaled, lr_pred_train, squared=False)"
+    "mean_squared_error(y_train, tweed_pred_train, squared=False) - mean_squared_error(y_val, tweed_pred_val, squared=False), mean_squared_error(y_train, lass_pred_train, squared=False) - mean_squared_error(y_val, lass_pred_val, squared=False), mean_squared_error(y_train, lr_pred_train, squared=False) -  mean_squared_error(y_val, lr_pred_val, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "315397.4604281871"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweed_pred_test = tweedie.predict(X_test_scaled)\n",
+    "mean_squared_error(y_test, tweed_pred_test, squared=False)"
    ]
   },
   {
